# FurRailEngineers

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md  run-build
include/engine/: fps_counter.h  window.h
src/: main.cpp
src/engine/: fps_counter.cpp  window.cpp
